--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ body {
           animation: 1.5s shine linear infinite;
 }
 .card.is-loading h2 {
-  height: 40px;
+  height: 30px;
   max-width: 75%;
   margin-bottom: 1rem;
   position: relative;
@@ -217,7 +217,7 @@ body {
   transform: translateX(-50%);
 }
 .card.is-loading p {
-  height: 35px;
+  height: 25px;
 }
 
 @-webkit-keyframes shine {
@@ -230,4 +230,51 @@ body {
   to {
     background-position-x: -200%;
   }
+}
+/* project page */
+.project-info h5 {
+    font-weight: 450;
+    font-style: normal;
+    font-size: 1em;
+    line-height: 1.065;
+    margin-bottom: 1em;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    opacity: .5;
+}
+.project-info .line {
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: var(--border-color);
+    margin: 1.75em 0 1.5em 0;
+}
+.project-info a {
+    text-decoration: none;
+}
+.project-info p, .project-info span {
+    font-weight: 450;
+    font-style: normal;
+    font-size: 1.3em;
+    line-height: 1.66;
+}
+
+.project-info span {
+    position: relative;
+}
+.project-info span::after {
+    border-bottom: 2px solid transparent;
+    bottom: 0;
+    content: "";
+    height: 10px;
+    left: 0;
+    bottom: -5px;
+    position: absolute;
+    transform: scaleX(0);
+    transition: all .3s ease-in-out;
+    width: 100%;
+}
+.project-info span:hover::after {
+    border-bottom: 2px solid var(--text-hover-color);
+    transform: scaleX(1);
 }
