--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,21 @@
   --bg-color: #fff;
   --text-color: #333;
   --text-hover-color: #666;
+  --lighter-text: #616161;
   --border-color: #dddddd;
+  --project-text: #333;
+  --gradient-value-1: #ececec;
+  --gradient-value-2: #f5f5f5;
+}
+.dark-mode {
+  --bg-color: #171717;
+  --text-color: #e5e5e5;
+  --text-hover-color: #999;
+  --lighter-text: #616161;
+  --border-color: #555;
+  --project-text: #333;
+  --gradient-value-1: #414141;
+  --gradient-value-2: #5f5f5f;
 }
 * {
   margin: 0;
@@ -15,6 +29,9 @@
 
 *:focus {
   outline: none;
+}
+.footer span {
+  color: var(--lighter-text);
 }
 body {
   background-color: var(--bg-color);
@@ -53,6 +70,15 @@ body {
 .nav-link:active,
 .nav-link:focus {
   color: var(--text-hover-color);
+}
+.theme-toggler {
+  padding: 0.5rem;
+  line-height: 2;
+  cursor: pointer;
+}
+.theme-icon {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 .hero-text span {
   font-family: "Calibre", sans-serif;
@@ -98,6 +124,12 @@ body {
   left: 0;
   width: 100%;
   padding: 30px 45px;
+}
+.project-title, .project-description, .project-link span, .project-link i {
+  color: var(--project-text);
+}
+.project-link .view-all, .view-all i {
+  color: var(--text-color);
 }
 .project-title {
   font-family: "Noe Display", sans-serif;
@@ -164,7 +196,9 @@ body {
   font-size: 1.4rem;
   line-height: 3rem;
 }
-
+.social-link:hover .fa-brands {
+  color: var(--text-hover-color);
+}
 /* transitions */
 .page-enter-active,
 .page-leave-active {
@@ -182,7 +216,9 @@ body {
 }
 
 /* loading animation */
-
+.card {
+  background: transparent;
+}
 .card .img {
   max-width: 100%;
   min-height: 650px;
@@ -200,8 +236,8 @@ body {
 .card.is-loading .img,
 .card.is-loading h2,
 .card.is-loading p {
-  background: #eee;
-  background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
+  background: transparent;
+  background: linear-gradient(110deg, var(--gradient-value-1) 8%, var(--gradient-value-2) 18%, var(--gradient-value-1) 33%);
   background-size: 200% 100%;
   -webkit-animation: 1.5s shine linear infinite;
   animation: 1.5s shine linear infinite;
